# advent_of_code_2020

./: CMakeLists.txt  LICENSE  README.md
.github/workflows/: c-cpp.yml  cmake.yml
day_01/: test.cpp
day_02/: test.cpp
day_03/: test.cpp
day_04/: test.cpp
day_05/: test.cpp
